# treehacks25

./: README.md
be/: .gitignore  app.py  canvas_api.py  chroma.py  es_api.py  groq_api.py  langgraph_helper.py  llm.py  pyproject.toml
fe/: package-lock.json  package.json  tailwind.config.ts
fe/app/: globals.css  layout.tsx  page.tsx
fe/app/chat/: page.tsx
fe/components/: DrawingCanvas.tsx
fe/components/sidebar/: LeftSidebarContainer.tsx
fe/components/ui/: spinner.tsx
fe/styles/: fonts.ts
